# mirelo

./: .gitignore  README.md  main.py  pyproject.toml  result_filtered.jsonl  thresholds.py
filter_pipeline/: audio_io.py  classify.py  vggsound.py
tests/: test_audio_io.py
