[project]
name = "mirelo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "setuptools<=70.0.0",
    "tensorflow>=2.20.0",
    "tensorflow-hub>=0.16.1",
    "tqdm>=4.67.3",
]
